--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </h1>
     <div class="subtitle">Clique no botão com ícone de Microfone abaixo e pressione "permitir" assim que o pop-up for exibido. Após isso, dê um comando de voz!</div>
     <img src="statics/SofIA.jpg" id="SofIA"/>
-    
+    <div id="description"></div>
     <div class="content-container">
         <button id="voice" onclick="reconhecimento()">
             <img src="statics/Microfone.png" id="mic"/>
